fix JiraController - removed some code smells